--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {},
   "keywords": [],
-  "author": "",
+  "author": "cyril-john",
   "license": "ISC",
   "description": "",
   "devDependencies": {
